--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -4,14 +4,28 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+
 	<servlet>
 		<servlet-name>Yfat_yolles_project</servlet-name>
 		<servlet-class>il.ac.mta.java.Yfat_yolles_projectServlet</servlet-class>
 	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>Yfat_yolles_project</servlet-name>
 		<url-pattern>/yfat_yolles_project</url-pattern>
 	</servlet-mapping>
+	
+	
+	<servlet>
+		<servlet-name>ex04</servlet-name>
+		<servlet-class>il.ac.mta.java.Ex04</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>ex04</servlet-name>
+		<url-pattern>/ex04</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
