--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -17,12 +17,12 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	
 	
 	<servlet>
-		<servlet-name>ex04</servlet-name>
-		<servlet-class>il.ac.mta.java.Ex04</servlet-class>
+		<servlet-name>Stock</servlet-name>
+		<servlet-class>il.ac.mta.java.Stock</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
-		<servlet-name>ex04</servlet-name>
+		<servlet-name>Stock</servlet-name>
 		<url-pattern>/ex04</url-pattern>
 	</servlet-mapping>
 	
