--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,32 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 
+ 	<servlet>
+ 		<servlet-name>Yfat_yolles_project</servlet-name>
+ 		<servlet-class>il.ac.mta.java.Yfat_yolles_projectServlet</servlet-class>
+ 	</servlet>
+	
+ 	<servlet-mapping>
+ 		<servlet-name>Yfat_yolles_project</servlet-name>
+ 		<url-pattern>/yfat_yolles_project</url-pattern>
+ 	</servlet-mapping>
+	
+	
 	<servlet>
-		<servlet-name>Yfat_yolles_project</servlet-name>
-		<servlet-class>il.ac.mta.java.Yfat_yolles_projectServlet</servlet-class>
+		<servlet-name>StockDetailsServlet</servlet-name>
+		<servlet-class>il.ac.mta.java.StockDetailsServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
-		<servlet-name>Yfat_yolles_project</servlet-name>
-		<url-pattern>/yfat_yolles_project</url-pattern>
+		<servlet-name>StockDetailsServlet</servlet-name>
+		<url-pattern>/stockdetails</url-pattern>
 	</servlet-mapping>
 	
-	
-	<servlet>
-		<servlet-name>Stock</servlet-name>
-		<servlet-class>il.ac.mta.java.Stock</servlet-class>
-	</servlet>
-	
-	<servlet-mapping>
-		<servlet-name>Stock</servlet-name>
-		<url-pattern>/ex04</url-pattern>
-	</servlet-mapping>
-	
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
-</web-app>
+ 	<welcome-file-list>
+ 		<welcome-file>index.html</welcome-file>
+ 	</welcome-file-list
