--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,6 +1,10 @@
- xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
- xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
- http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+<?xml version="1.0" encoding="utf-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xmlns="http://java.sun.com/xml/ns/javaee"
+xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+
 
  	<servlet>
  		<servlet-name>Yfat_yolles_project</servlet-name>
@@ -12,7 +16,6 @@
  		<url-pattern>/yfat_yolles_project</url-pattern>
  	</servlet-mapping>
 	
-	
 	<servlet>
 		<servlet-name>StockDetailsServlet</servlet-name>
 		<servlet-class>il.ac.mta.java.StockDetailsServlet</servlet-class>
@@ -20,9 +23,10 @@
 	
 	<servlet-mapping>
 		<servlet-name>StockDetailsServlet</servlet-name>
-		<url-pattern>/stockdetails</url-pattern>
+		<url-pattern>/stockDetails</url-pattern>
 	</servlet-mapping>
 	
- 	<welcome-file-list>
- 		<welcome-file>index.html</welcome-file>
- 	</welcome-file-list
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
+</web-app>
