--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,31 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
 
 
- 	<servlet>
- 		<servlet-name>Yfat_yolles_project</servlet-name>
- 		<servlet-class>il.ac.mta.java.Yfat_yolles_projectServlet</servlet-class>
- 	</servlet>
-	
- 	<servlet-mapping>
- 		<servlet-name>Yfat_yolles_project</servlet-name>
- 		<url-pattern>/yfat_yolles_project</url-pattern>
- 	</servlet-mapping>
-	
+	<servlet>
+		<servlet-name>Yfat_yolles_project</servlet-name>
+		<servlet-class>il.ac.mta.java.Yfat_yolles_projectServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Yfat_yolles_project</servlet-name>
+		<url-pattern>/yfat_yolles_project</url-pattern>
+	</servlet-mapping>
+
 	<servlet>
 		<servlet-name>StockDetailsServlet</servlet-name>
 		<servlet-class>il.ac.mta.java.StockDetailsServlet</servlet-class>
 	</servlet>
-	
+
 	<servlet-mapping>
 		<servlet-name>StockDetailsServlet</servlet-name>
 		<url-pattern>/stockDetails</url-pattern>
 	</servlet-mapping>
-	
+
+	<servlet>
+		<servlet-name>PortfolioServlet</servlet-name>
+		<servlet-class>il.ac.mta.java.stocks.servlet.PortfolioServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>PortfolioServlet</servlet-name>
+		<url-pattern>/portfolio</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
