--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -8,7 +8,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 
 	<servlet>
 		<servlet-name>Yfat_yolles_project</servlet-name>
-		<servlet-class>il.ac.mta.java.Yfat_yolles_projectServlet</servlet-class>
+		<servlet-class>il.ac.mta.java.servlet.Yfat_yolles_projectServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
@@ -18,7 +18,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 
 	<servlet>
 		<servlet-name>StockDetailsServlet</servlet-name>
-		<servlet-class>il.ac.mta.java.StockDetailsServlet</servlet-class>
+		<servlet-class>il.ac.mta.java.servlet.StockDetailsServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
@@ -28,7 +28,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 
 	<servlet>
 		<servlet-name>PortfolioServlet</servlet-name>
-		<servlet-class>il.ac.mta.java.stocks.servlet.PortfolioServlet</servlet-class>
+		<servlet-class>il.ac.mta.java.servlet.PortfolioServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
