--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -4,19 +4,68 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
-
-
-	<servlet>
-		<servlet-name>PortfolioServlet</servlet-name>
-		<servlet-class>il.ac.mta.java.servlet.PortfolioServlet</servlet-class>
+	
+    <servlet>
+		<servlet-name>Stock</servlet-name>
+		<servlet-class>il.ac.mta.servlet.StockServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>PortfolioServlet</servlet-name>
+		<servlet-name>Stock</servlet-name>
+		<url-pattern>/stock</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Portfolio</servlet-name>
+		<servlet-class>il.ac.mta.servlet.PortfolioServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Portfolio</servlet-name>
 		<url-pattern>/portfolio</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>PortfolioEdit</servlet-name>
+		<servlet-class>il.ac.mta.servlet.PortfolioEditServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>PortfolioEdit</servlet-name>
+		<url-pattern>/portfolio/edit</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Market</servlet-name>
+		<servlet-class>il.ac.mta.servlet.MarketServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Market</servlet-name>
+		<url-pattern>/market</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>AlgoUpdate</servlet-name>
+		<servlet-class>il.ac.mta.servlet.CronServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>AlgoUpdate</servlet-name>
+		<url-pattern>/cron/algo_update</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>portfolio.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>cron</web-resource-name>
+			<url-pattern>/cron/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
 </web-app>
